--- a/annotations/Annotations3/pom.xml
+++ b/annotations/Annotations3/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>com.fujitsu</groupId>
 		<artifactId>vdmj-suite</artifactId>
-		<version>4.4.1-SNAPSHOT</version>
+		<version>4.4.4-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
@@ -16,7 +16,7 @@
 		<developer>
 			<id>LeoFreitas</id>
 			<name>Leo Freitas</name>
-			<email>leo.york@gmail.com</email>
+			<email>leo.freitas@newcastle.ac.uk</email>
 			<roles>
 				<role>developer</role>
 			</roles>
