--- a/annotations/witness/pom.xml
+++ b/annotations/witness/pom.xml
@@ -31,7 +31,7 @@
 		<dependency>
 			<groupId>com.fujitsu</groupId>
 			<artifactId>vdmj</artifactId>
-			<version>4.3.0</version>
+			<version>${revision}</version>
 		</dependency>
 	</dependencies>
 
@@ -42,8 +42,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.7</source>
-					<target>1.7</target>
+					<source>1.8</source>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
