Nick's conway but with proper VSCode project for Java launch as well.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ experiments/Games/ConwayGL/target
 experiments/Games/ConwayGL/bin
 annotations/Annotations3/target
 annotations/witness/target
+experiments/Games/ConwayNB/bin
