Nick's VSCode integration

--- a/plugins/vdm2isa/java/pom.xml
+++ b/plugins/vdm2isa/java/pom.xml
@@ -31,7 +31,12 @@
 		<dependency>
 			<groupId>com.fujitsu</groupId>
 			<artifactId>vdmj</artifactId>
-			<version>${revision}</version>
+			<version>4.4.4-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fujitsu</groupId>
+			<artifactId>lsp</artifactId>
+			<version>4.4.4-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
