widening type of certain constructs.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ experiments/Games/ConwayGL/bin
 annotations/Annotations3/target
 annotations/witness/target
 experiments/Games/ConwayNB/bin
+plugins/vdm2isa/java/.generated
