--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ annotations/Annotations3/target
 annotations/witness/target
 experiments/Games/ConwayNB/bin
 plugins/vdm2isa/java/.generated
+plugins/vdm2isa/java/src/main/resources/.generated
