--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ annotations/witness/target
 experiments/Games/ConwayNB/bin
 plugins/vdm2isa/java/.generated
 plugins/vdm2isa/java/src/main/resources/.generated
+github-access-token.txt
