--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ experiments/Games/ConwayNB/bin
 plugins/vdm2isa/java/.generated
 plugins/vdm2isa/java/src/main/resources/.generated
 github-access-token.txt
+plugins/vdm2isa/java/bin
