--- a/experiments/Games/ConwayNB/.vscode/settings.json
+++ b/experiments/Games/ConwayNB/.vscode/settings.json
@@ -3,6 +3,6 @@
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "/Users/nljsf/Local/reps/git/vdmj/vdmj/target/vdmj-4.4.4-SNAPSHOT-211004.jar"
+        "/Users/nljsf/.m2/repository/com/fujitsu/vdmj/4.4.4-SNAPSHOT/vdmj-4.4.4-SNAPSHOT.jar"
     ]
 }
