--- a/plugins/vdm2isa/java/pom.xml
+++ b/plugins/vdm2isa/java/pom.xml
@@ -27,6 +27,7 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.13.1</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.fujitsu</groupId>
@@ -38,6 +39,16 @@
 			<artifactId>lsp</artifactId>
 			<version>4.4.5-SNAPSHOT</version>
 		</dependency>
+		<!--
+		<dependency>
+			<groupId>com.fujitsu</groupId>
+			<artifactId>vdmj</artifactId>
+			<version>4.4.5-SNAPSHOT</version>
+			<classifier>tests</classifier>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		 -->
 	</dependencies>
 
 	<build>
