--- a/plugins/vdmlib/pom.xml
+++ b/plugins/vdmlib/pom.xml
@@ -9,14 +9,27 @@
 		<version>4.4.5-SNAPSHOT</version>
 	</parent>
 
-	<dependencies>
-		<dependency>
-			<groupId>com.fujitsu</groupId>
-			<artifactId>vdmj</artifactId>
-			<version>${revision}</version>
-		</dependency>
-	</dependencies>
-
+	 <dependencies>
+        <dependency>
+            <groupId>com.fujitsu</groupId>
+            <artifactId>vdmj</artifactId>
+            <version>${revision}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fujitsu</groupId>
+            <artifactId>vdmjunit</artifactId>
+            <version>${revision}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fujitsu</groupId>
+            <artifactId>stdlib</artifactId>
+            <version>${revision}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+    
 	<build>
 		<plugins>
 			<plugin>
@@ -62,6 +75,26 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+           <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.5</version>
+                <configuration>
+                    <includes>
+                        <include>**/*Tests.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+
 		</plugins>
 	</build>
 </project>
