--- a/plugins/vdm2isa/java/pom.xml
+++ b/plugins/vdm2isa/java/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>lsp</artifactId>
 			<version>4.4.5-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fujitsu</groupId>
+			<artifactId>VDMToolkit_Annotations</artifactId>
+			<version>4.4.5-SNAPSHOT</version>
+		</dependency>
 		<!--
 		<dependency>
 			<groupId>com.fujitsu</groupId>
