--- a/plugins/annotations/pom.xml
+++ b/plugins/annotations/pom.xml
@@ -1,14 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>VDMToolkit_Annotations</artifactId>
-	<name>VDMToolkit_Annotations</name>
-	<description>VDM toolkit annotations</description>
+	<artifactId>annotationsVDMToolkit</artifactId>
+	<name>AnnotationsVDMToolkit</name>
+	<description>VDM Toolkit annotations</description>
 	
 	<parent>
-		<groupId>com.fujitsu</groupId>
-		<artifactId>vdmj-suite</artifactId>
+		<groupId>vdmtoolkit</groupId>
+		<artifactId>VDMToolkit-suite</artifactId>
 		<version>4.4.5-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
 	<developers>
