--- a/plugins/vdmlib/pom.xml
+++ b/plugins/vdmlib/pom.xml
@@ -5,9 +5,10 @@
 	<description>VDM Toolkit Libraries</description>
 
 	<parent>
-		<groupId>com.fujitsu</groupId>
-		<artifactId>vdmj-suite</artifactId>
+		<groupId>vdmtoolkit</groupId>
+		<artifactId>VDMToolkit-suite</artifactId>
 		<version>4.4.5-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<dependencies>
