--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ plugins/vdm2isa/java/.generated
 plugins/vdm2isa/java/src/main/resources/.generated
 plugins/vdm2isa/java/bin
 plugins/annotations/target
+plugins/AnnotationsVDMToolkit/target
