--- a/plugins/AnnotationsVDMToolkit/pom.xml
+++ b/plugins/AnnotationsVDMToolkit/pom.xml
@@ -39,6 +39,11 @@
 			<artifactId>lsp</artifactId>
 			<version>4.4.5-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fujitsu</groupId>
+			<artifactId>annotations</artifactId>
+			<version>4.4.5-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
