--- a/plugins/vdm2isa/pom.xml
+++ b/plugins/vdm2isa/pom.xml
@@ -49,6 +49,16 @@
 		</dependency>
 		<dependency>
 			<groupId>com.fujitsu</groupId>
+			<artifactId>stdlib</artifactId>
+			<version>4.4.5-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fujitsu</groupId>
+			<artifactId>annotations</artifactId>
+			<version>4.4.5-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fujitsu</groupId>
 			<artifactId>lsp</artifactId>
 			<version>4.4.5-SNAPSHOT</version>
 		</dependency>
