--- a/plugins/AnnotationsVDMToolkit/pom.xml
+++ b/plugins/AnnotationsVDMToolkit/pom.xml
@@ -8,7 +8,7 @@
 	<parent>
 		<groupId>vdmtoolkit</groupId>
 		<artifactId>VDMToolkit-suite</artifactId>
-		<version>4.4.5-SNAPSHOT</version>
+		<version>4.5.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
@@ -30,19 +30,19 @@
 			<version>4.13.1</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fujitsu</groupId>
+			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>vdmj</artifactId>
-			<version>4.4.5-SNAPSHOT</version>
+			<version>4.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fujitsu</groupId>
+			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>lsp</artifactId>
-			<version>4.4.5-SNAPSHOT</version>
+			<version>4.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fujitsu</groupId>
+			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>annotations</artifactId>
-			<version>4.4.5-SNAPSHOT</version>
+			<version>4.5.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
