--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -10,18 +10,18 @@
 	<name>VDMToolkit Suite</name>
 	<description>VDM Toolkit translation, annotations, libraries</description>
 	<packaging>pom</packaging>
-	<version>4.4.5-SNAPSHOT</version>	<!-- This version is inherited by all modules -->
+	<version>4.5.0-SNAPSHOT</version>	<!-- This version is inherited by all modules -->
 
 	<properties>
 	    <maven.build.timestamp.format>yyMMdd</maven.build.timestamp.format>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	    <revision>4.4.5-SNAPSHOT</revision>	<!-- CHANGE VERSION HERE, AND MODULE'S PARENT POMs -->
+	    <revision>4.5.0-SNAPSHOT</revision>	<!-- CHANGE VERSION HERE, AND MODULE'S PARENT POMs -->
 	</properties>
 
 	<parent>
-		<groupId>com.fujitsu</groupId>
+		<groupId>dk.au.ece.vdmj</groupId>
 		<artifactId>vdmj-suite</artifactId>
-		<version>4.4.5-SNAPSHOT</version>
+		<version>4.5.0-SNAPSHOT</version>
 	</parent>
 	
 	<!-- sub modules -->
@@ -50,3 +50,5 @@
 	</scm>
 
 </project>
+
+	
