--- a/plugins/vdm2isa/pom.xml
+++ b/plugins/vdm2isa/pom.xml
@@ -15,7 +15,7 @@
 	<parent>
 		<groupId>vdmtoolkit</groupId>
 		<artifactId>VDMToolkit-suite</artifactId>
-		<version>4.4.5-SNAPSHOT</version>
+		<version>4.5.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -42,25 +42,26 @@
 			<version>4.13.1</version>
 			<scope>test</scope>
 		</dependency>
+
 		<dependency>
-			<groupId>com.fujitsu</groupId>
+			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>vdmj</artifactId>
-			<version>4.4.5-SNAPSHOT</version>
+			<version>4.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fujitsu</groupId>
+			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>stdlib</artifactId>
-			<version>4.4.5-SNAPSHOT</version>
+			<version>4.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fujitsu</groupId>
+			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>annotations</artifactId>
-			<version>4.4.5-SNAPSHOT</version>
+			<version>4.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>com.fujitsu</groupId>
+			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>lsp</artifactId>
-			<version>4.4.5-SNAPSHOT</version>
+			<version>4.5.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>vdmtoolkit</groupId>
@@ -69,9 +70,9 @@
 		</dependency>
 		<!--
 		<dependency>
-			<groupId>com.fujitsu</groupId>
+			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>vdmj</artifactId>
-			<version>4.4.5-SNAPSHOT</version>
+			<version>4.5.0-SNAPSHOT</version>
 			<classifier>tests</classifier>
 			<type>test-jar</type>
 			<scope>test</scope>
