--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ experiments/Games/ConwayGL/target
 experiments/Games/ConwayGL/bin
 experiments/Games/ConwayNB/bin
 plugins/vdm2isa/java/.generated
+plugins/vdm2isa/.ci-friendly-pom.xml
 plugins/vdm2isa/java/src/main/resources/.generated
 plugins/vdm2isa/java/bin
-plugins/AnnotationsVDMToolkit/target
+plugins/annotationsVDMToolkit/target
 plugins/vdm2isa/src/main/resources/dump
 plugins/vdm2isa/src/main/resources/output
