--- a/plugins/annotationsVDMToolkit/pom.xml
+++ b/plugins/annotationsVDMToolkit/pom.xml
@@ -8,15 +8,15 @@
 	<parent>
 		<groupId>vdmtoolkit</groupId>
 		<artifactId>VDMToolkit-suite</artifactId>
-		<version>4.5.0-SNAPSHOT</version>
+		<version>${revision}</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
 	<developers>
 		<developer>
-			<id>LeoFreitas</id>
+			<id>leouk</id>
 			<name>Leo Freitas</name>
-			<email>leo.freitas@newcastle.ac.uk</email>
+			<email>leo.york@gmail.com</email>
 			<roles>
 				<role>developer</role>
 			</roles>
@@ -25,59 +25,47 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-		</dependency>
-		<dependency>
 			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>vdmj</artifactId>
-			<version>4.5.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>dk.au.ece.vdmj</groupId>
-			<artifactId>lsp</artifactId>
-			<version>4.5.0-SNAPSHOT</version>
+			<version>${dk.au.ece.vdmj-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>annotations</artifactId>
-			<version>4.5.0-SNAPSHOT</version>
+			<version>${dk.au.ece.vdmj-version}</version>
 		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
-			<plugin>
+			<!-- Allows logging message during maven build phase-->
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.2</version>
-                <executions>
-                    <execution>
-                        <id>default-jar</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                        <configuration>
-							<finalName>
-								${project.artifactId}-${project.version}-${maven.build.timestamp}
-							</finalName>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<?m2e execute onConfiguration,onIncremental?>
+						<id>print-log</id>
+						<phase>initialize</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target>
+								<echo message="Your log message for project ${vdmjrevision}" />
+							</target>
 						</configuration>
 					</execution>
 				</executions>
+			</plugin> -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
 				<executions>
 					<execution>
 						<id>copy-resources</id>
@@ -93,12 +81,7 @@
 									<filtering>false</filtering>
 									<include>*.vdmsl</include>
 									<include>*.thy</include>
-								</resource>
-								<resource>
-									<directory>src/main/resources</directory>
-									<filtering>false</filtering>
-									<include>*.vdmsl</include>
-									<include>*.thy</include>
+									<include>*.sh</include>									
 								</resource>
 								<resource>
 									<directory>.</directory>
@@ -109,6 +92,14 @@
 						</configuration>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
 			</plugin>
 		</plugins>
 	</build>
