--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -8,21 +8,21 @@
 	<groupId>vdmtoolkit</groupId>
 	<artifactId>VDMToolkit-suite</artifactId>
 	<name>VDMToolkit Suite</name>
-	<description>VDM Toolkit translation, annotations, libraries</description>
 	<packaging>pom</packaging>
-	<version>4.5.0-SNAPSHOT</version>	<!-- This version is inherited by all modules -->
+	<version>${revision}</version>	<!-- This version is inherited by all modules -->
 
 	<properties>
 	    <maven.build.timestamp.format>yyMMdd</maven.build.timestamp.format>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	    <revision>4.5.0-SNAPSHOT</revision>	<!-- CHANGE VERSION HERE, AND MODULE'S PARENT POMs -->
+	    <revision>1.2.0-SNAPSHOT</revision>	<!-- CHANGE VERSION HERE, AND MODULE'S PARENT POMs -->
+		<dk.au.ece.vdmj-version>4.5.0-SNAPSHOT</dk.au.ece.vdmj-version>
 	</properties>
 
-	<parent>
+	<!-- <parent>
 		<groupId>dk.au.ece.vdmj</groupId>
 		<artifactId>vdmj-suite</artifactId>
 		<version>4.5.0-SNAPSHOT</version>
-	</parent>
+	</parent> -->
 	
 	<!-- sub modules -->
 	<modules>
@@ -31,23 +31,205 @@
 		<module>vdm2isa</module>
 	</modules>
 
+	<dependencyManagement>
+	<dependencies>
+		<!-- <dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
+		</dependency> -->
+		<dependency>
+			<groupId>dk.au.ece.vdmj</groupId>
+			<artifactId>vdmj</artifactId>
+			<version>${dk.au.ece.vdmj-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>dk.au.ece.vdmj</groupId>
+			<artifactId>vdmjunit</artifactId>
+			<version>${dk.au.ece.vdmj-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>dk.au.ece.vdmj</groupId>
+			<artifactId>lsp</artifactId>
+			<version>${dk.au.ece.vdmj-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>dk.au.ece.vdmj</groupId>
+			<artifactId>annotations</artifactId>
+			<version>${dk.au.ece.vdmj-version}</version>
+		</dependency>
+	</dependencies>
+	</dependencyManagement>
+	
 	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.1</version>
-				<configuration>
-					<goals>deploy</goals>
-				</configuration>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!-- Configure the compiler for all VDM Tookit Projects -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.10.1</version>
+					<configuration>
+						<compilerArgs>
+							<arg>-Xlint:deprecation</arg>
+						</compilerArgs>
+						<source>1.8</source>
+						<target>1.8</target>
+					</configuration>
+				</plugin>
+
+				<!-- Attatch sources to all installed jars -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-source-plugin</artifactId>
+					<version>3.2.1</version>
+					<executions>
+						<execution>
+							<id>attach-sources</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<attach>true</attach>
+					</configuration>
+				</plugin>
+
+				<!-- Enable JavaDoc but dont fail on error. This must be disabled for
+					the Eclipse project in the IDE -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-javadoc-plugin</artifactId>
+					<version>3.3.2</version>
+					<executions>
+						<execution>
+							<id>attach-javadocs</id>
+							<goals>
+								<goal>jar</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<failOnError>false</failOnError>
+						<quiet>true</quiet>
+						<source>8</source>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-resources-plugin</artifactId>
+					<version>3.1.0</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.0.0-M6</version>
+					<configuration>
+						<includes>
+							<include>**/*Test.java</include>
+						</includes>
+					</configuration>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>3.3.0</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-assembly-plugin</artifactId>
+					<version>3.3.0</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-install-plugin</artifactId>
+					<version>3.0.0-M1</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-deploy-plugin</artifactId>
+					<version>3.0.0-M2</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.2.2</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>3.2.0</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jarsigner-plugin</artifactId>
+					<version>3.0.0</version>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
+        <finalName>
+            ${project.artifactId}-${project.version}-${maven.build.timestamp}
+        </finalName>
+
+        <plugins>
+            <plugin>
+                <groupId>com.outbrain.swinfra</groupId>
+                <artifactId>ci-friendly-flatten-maven-plugin</artifactId>
+                <version>1.0.14</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>clean</goal>
+                            <goal>flatten</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+
 	</build>
 
 	<scm>
+		<url>https://github.com/leouk/VDM_Toolkit</url>
 		<connection>scm:git:https://github.com/leouk</connection>
 		<developerConnection>scm:git:https://github.com/leouk</developerConnection>
 	</scm>
+
+	<url>https://github.com/leouk/VDM_Toolkit</url>
+
+    <description>VDM Tookit provides VDM-SL libraries, annotations, 
+		and translation to Isabelle/HOL.
+	</description>
+
+    <developers>
+        <developer>
+            <id>leouk</id>
+            <name>Leo Freitas</name>
+            <email>leo.york@gmail.com</email>
+            <roles>
+                <role>developer</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <licenses>
+        <license>
+            <name>MIT</name>
+            <url>https://github.com/leouk/VDM_Toolkit/blob/main/LICENSE</url>
+        </license>
+    </licenses>
 
 </project>
 
