--- a/plugins/vdmlib/pom.xml
+++ b/plugins/vdmlib/pom.xml
@@ -1,48 +1,62 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>vdmlib</artifactId>
-	<name>vdmlib</name>
-	<description>VDM Toolkit Libraries</description>
 
 	<parent>
 		<groupId>vdmtoolkit</groupId>
 		<artifactId>VDMToolkit-suite</artifactId>
-		<version>4.5.0-SNAPSHOT</version>
+		<version>${revision}</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
+
+	<artifactId>vdmlib</artifactId>
+	<name>vdmlib</name>
+	<description>VDM Toolkit Libraries</description>
+
+	<developers>
+		<developer>
+			<id>leouk</id>
+			<name>Leo Freitas</name>
+			<email>leo.york@gmail.com</email>
+			<roles>
+				<role>developer</role>
+			</roles>
+		</developer>
+	</developers>
 
 	<dependencies>
 		<dependency>
 			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>vdmj</artifactId>
-			<version>4.5.0-SNAPSHOT</version>
-			<scope>test</scope>
+			<version>${dk.au.ece.vdmj-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>vdmjunit</artifactId>
-			<version>4.5.0-SNAPSHOT</version>
+			<version>${dk.au.ece.vdmj-version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>stdlib</artifactId>
-			<version>4.5.0-SNAPSHOT</version>
-			<scope>test</scope>
+			<version>${dk.au.ece.vdmj-version}</version>
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>annotations</artifactId>
-			<version>4.5.0-SNAPSHOT</version>
+			<version>${dk.au.ece.vdmj-version}</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
 				<executions>
 					<execution>
 						<id>copy-resources</id>
@@ -57,7 +71,6 @@
 									<directory>src/main/resources</directory>
 									<filtering>false</filtering>
 									<include>*.vdmsl</include>
-									<include>*.png</include>
 								</resource>
 								<resource>
 									<directory>.</directory>
@@ -71,36 +84,12 @@
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.5</version>
-				<configuration>
-					<includes>
-						<include>**/*Tests.java</include>
-					</includes>
-				</configuration>
-			</plugin>
-			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.2</version>
-				<executions>
-					<execution>
-						<id>default-jar</id>
-						<phase>package</phase>
-						<configuration>
-							<useDefaultManifestFile>true</useDefaultManifestFile>
-							<classesDirectory>target/classes</classesDirectory>
-						</configuration>
-					</execution>
-				</executions>
 			</plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+            </plugin>
 		</plugins>
 	</build>
 </project>
