--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -9,21 +9,18 @@
 	<artifactId>VDMToolkit-suite</artifactId>
 	<name>VDMToolkit Suite</name>
 	<packaging>pom</packaging>
-	<version>${revision}</version>	<!-- This version is inherited by all modules -->
+	<!-- This version is inherited by all modules -->
+	<version>${revision}</version>	
 
 	<properties>
 	    <maven.build.timestamp.format>yyMMdd</maven.build.timestamp.format>
 	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	    <revision>1.2.0-SNAPSHOT</revision>	<!-- CHANGE VERSION HERE, AND MODULE'S PARENT POMs -->
+		<!-- Change VDM Toolkit  -->
+	    <revision>1.2.0-SNAPSHOT</revision>
+		<!-- VDMJ version, which percolates to all dependent POMs -->	
 		<dk.au.ece.vdmj-version>4.5.0-SNAPSHOT</dk.au.ece.vdmj-version>
 	</properties>
 
-	<!-- <parent>
-		<groupId>dk.au.ece.vdmj</groupId>
-		<artifactId>vdmj-suite</artifactId>
-		<version>4.5.0-SNAPSHOT</version>
-	</parent> -->
-	
 	<!-- sub modules -->
 	<modules>
 		<module>annotationsVDMToolkit</module>
@@ -31,35 +28,35 @@
 		<module>vdm2isa</module>
 	</modules>
 
+	<!-- General dependency inclusion with relative versioning -->
 	<dependencyManagement>
-	<dependencies>
-		<!-- <dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.1</version>
-			<scope>test</scope>
-		</dependency> -->
-		<dependency>
-			<groupId>dk.au.ece.vdmj</groupId>
-			<artifactId>vdmj</artifactId>
-			<version>${dk.au.ece.vdmj-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>dk.au.ece.vdmj</groupId>
-			<artifactId>vdmjunit</artifactId>
-			<version>${dk.au.ece.vdmj-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>dk.au.ece.vdmj</groupId>
-			<artifactId>lsp</artifactId>
-			<version>${dk.au.ece.vdmj-version}</version>
-		</dependency>
-		<dependency>
-			<groupId>dk.au.ece.vdmj</groupId>
-			<artifactId>annotations</artifactId>
-			<version>${dk.au.ece.vdmj-version}</version>
-		</dependency>
-	</dependencies>
+		<dependencies>
+			<dependency>
+				<groupId>dk.au.ece.vdmj</groupId>
+				<artifactId>vdmj</artifactId>
+				<version>${dk.au.ece.vdmj-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dk.au.ece.vdmj</groupId>
+				<artifactId>vdmjunit</artifactId>
+				<version>${dk.au.ece.vdmj-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dk.au.ece.vdmj</groupId>
+				<artifactId>lsp</artifactId>
+				<version>${dk.au.ece.vdmj-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dk.au.ece.vdmj</groupId>
+				<artifactId>stdlib</artifactId>
+				<version>${dk.au.ece.vdmj-version}</version>
+			</dependency>
+			<dependency>
+				<groupId>dk.au.ece.vdmj</groupId>
+				<artifactId>annotations</artifactId>
+				<version>${dk.au.ece.vdmj-version}</version>
+			</dependency>
+		</dependencies>
 	</dependencyManagement>
 	
 	<build>
