vdmj.properties from lates VSCode + linking if VDMJTK_HOME is set

--- a/scripts/vdmj.properties
+++ b/scripts/vdmj.properties
@@ -1,42 +1,70 @@
 #
-# Settings for VDMJ. These override defaults in the code.
+# Settings for VDMJ. These override defaults in the code. 
 #
 
-# The tab stop for source files (default 4)
-#vdmj.parser.tabstop = 4
+# Merge comments across new lines when separating them with -- comments.
+vdmj.parser.merge_comments=true
 
-# Nesting of block comments: 0=support, 1=warning, 2=error, 3=ignore
-#vdmj.parser.comment_nesting = 3
+# Nesting of block comments: 0=support, 1=warning, 2=error, 3=ignore (default 3)
+vdmj.parser.comment_nesting = 3
+
+# External readers <.suffix>=<class> pairs 
+#vdmj.parser.external_readers = null
 
 # The package list for annotation classes to load.
-#vdmj.annotations.packages = com.fujitsu.vdmj.ast.annotations;annotations.ast
+# (default "com.fujitsu.vdmj.ast.annotations;annotations.ast")
+vdmj.annotations.packages = com.fujitsu.vdmj.ast.annotations;annotations.ast
 
 # Enable annotation debugging (default false)
-#vdmj.annotations.debug = false
+vdmj.annotations.debug = true
 
 # An alternative search path for the ClassMapper (default null)
-# vdmj.mapping.search_path = null
+#vdmj.mapping.search_path = null
 
 # Skip the check for mutually-recursive function calls (default false)
-# vdmj.tc.skip_recursive_check = false
+vdmj.tc.skip_recursive_check = false
 
 # Skip the check for definition dependency cycles (default false)
-# vdmj.tc.skip_cyclic_check = false
+vdmj.tc.skip_cyclic_check = false
 
 # The maximum TC errors reported before "Too many errors" (default 100)
-# vdmj.tc.max_errors = 100
+vdmj.tc.max_errors = 1000
 
-# The maximum number of expansions for "+" and "*" patterns (default 5)
-# vdmj.traces.max_repeats = 5
+# The maximum number of expansions for "+" and "*" trace patterns (default 5)
+vdmj.traces.max_repeats = 5
 
 # Serialize the system state between trace tests (default false)
-# vdmj.traces.save_state = false
+vdmj.traces.save_state = false
 
 # The size below which trace function args are expanded (default 50)
-# vdmj.traces.max_arg_length = 50
+vdmj.traces.max_arg_length = 50
 
-# The packages for command plugins to load from (default "plugins")
-# vdmj.cmd.plugins_path = plugins
+# The default timeslice (statements executed) for the FCFS policy (default 10)
+vdmj.scheduler.fcfs_timeslice = 10
 
-# The class name for the DebugLink (default null)
-# vdmj.debug.link_class = null
+# The vCPU/vBUS timeslice (default 10000)
+vdmj.scheduler.virtual_timeslice = 10000
+
+# The timeslice variation (+/- jitter ticks, default 0)
+vdmj.scheduler.jitter = 0
+
+# The default duration for RT statements (default 2)
+vdmj.rt.duration_default = 2
+
+# Enable transactional variable updates (default false)
+vdmj.rt.duration_transactions = false
+
+# Enable InstVarChange RT log entries (default false)
+vdmj.rt.log_instvarchanges = false
+
+# Maximum period thread overlaps allowed per object (default 20 - zero mean off)
+vdmj.rt.max_periodic_overlaps = 20
+
+# Enable extra diagnostics for guards etc. (default false)
+vdmj.rt.diags_guards = false
+
+# Enable extra RT log diagnostics for timesteps (default false)
+vdmj.rt.diags_timestep = false
+
+# The set size limit for power set expressions (default 30)
+vdmj.in.powerset_limit = 30
