changed library name to more sensible choice (CSVLib) instead of CSV3 (!)

--- a/plugins/vdmlib/.vscode/launch.json
+++ b/plugins/vdmlib/.vscode/launch.json
@@ -15,7 +15,7 @@
             "type": "java",
             "name": "Launch Native",
             "request": "launch",
-            "mainClass": "CSV3",
+            "mainClass": "CSVLib",
             "projectName": "vdmlib"
         }
     ]
