--- a/plugins/vdmlib/.vscode/launch.json
+++ b/plugins/vdmlib/.vscode/launch.json
@@ -16,7 +16,10 @@
             "name": "Launch Native",
             "request": "launch",
             "mainClass": "CSVLib",
-            "projectName": "vdmlib"
+            "projectName": "vdmlib",
+            // This starts the Java debug session inside ./src/main/resources
+            // useful to avoid VDMJ Copying new versions of library files on workspace folder
+            "cwd": "${workspaceFolder}${pathSeparator}src${pathSeparator}main${pathSeparator}resources"
         }
     ]
 }
