--- a/plugins/vdmlib/pom.xml
+++ b/plugins/vdmlib/pom.xml
@@ -28,6 +28,14 @@
 			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>vdmj</artifactId>
 			<version>${dk.au.ece.vdmj-version}</version>
+			<optional>true</optional>
+			<exclusions>
+				<exclusion>  <!-- exclude VDMJ from the build with dependencies assembly -->
+					<groupId>dk.au.ece.vdmj</groupId>
+					<artifactId>vdmj</artifactId>
+				</exclusion>
+			</exclusions>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>dk.au.ece.vdmj</groupId>
@@ -89,6 +97,28 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>single</goal>
+					</goals>
+					<configuration>
+						<!-- <archive>
+						<manifest>
+							<mainClass>${fully.qualified.main.class}</mainClass>
+						</manifest>
+						</archive> -->
+						<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+					</configuration>
+					</execution>
+				</executions>
+				</plugin>
 		</plugins>
 	</build>
 </project>
