--- a/plugins/vdmlib/.vscode/launch.json
+++ b/plugins/vdmlib/.vscode/launch.json
@@ -9,7 +9,10 @@
             "type": "vdm",
             "request": "launch",
             "noDebug": false,
-            "defaultName": "CSVExample"
+            "defaultName": "CSVExample",
+            // This starts the Java debug session inside ./src/main/resources
+            // useful to avoid VDMJ Copying new versions of library files on workspace folder
+            "cwd": "${workspaceFolder}${pathSeparator}src${pathSeparator}main${pathSeparator}resources"
         },
         {
             "type": "java",
