--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ plugins/vdm2isa-lsp/target
 plugins/vdmlib/src/main/resources/lib
 plugins/vdmlib/.generated
 plugins/vdmlib/src/main/resources/.generated
+plugins/vdm2isa/src/main/resources/HTML
