--- a/plugins/vdm2isa/pom.xml
+++ b/plugins/vdm2isa/pom.xml
@@ -56,6 +56,11 @@
 			<artifactId>annotationsVDMToolkit</artifactId>
 			<version>${revision}</version>
 		</dependency>
+		<dependency> 
+			<groupId>org.antlr</groupId> 
+			<artifactId>ST4</artifactId> 
+			<version>4.3.4</version> 
+		</dependency>
 	</dependencies>
 
 	<build>
