attempt at LSP Settings, not quite right

--- a/plugins/vdm2isa/.vscode/settings.json
+++ b/plugins/vdm2isa/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic"
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "vdm-vscode.server.development.experimentalServer": true
 }
