--- a/plugins/vdm2isa-lsp/.vscode/launch.json
+++ b/plugins/vdm2isa-lsp/.vscode/launch.json
@@ -1,11 +1,14 @@
 {
-    "configurations": [
-    {
-        "type": "java",
-        "name": "Attach to Remote Program",
-        "request": "attach",
-        "hostName": "<The host name or ip address of remote debuggee>",
-        "port": "<debug port of remote debuggee>"
-    }
+    "configurations": [        
+        {
+            "type": "java",
+            "name": "Launch LSP Server",
+            "request": "launch",
+            "mainClass": "lsp.LSPServerDebug",
+            "vmArgs": "-Xmx3000m -Xss1m -Dlspx.plugins=workspace.plugins.ISAPluginSL",
+            "args": "-vdmsl  -lsp 8000 -dap 8001"
+        }
+        // -Dlsp.log.filename=somefolder/lspdiags.log 
+        // -Dlspx.plugins=plugins.ISAPluginSL
     ]
 }
