--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ plugins/vdm2isa/pub/recursion/output/document
 plugins/vdm2isa/pub/sorting/main.bbl
 plugins/vdm2isa/pub/sorting/main.blg
 plugins/vdm2isa/pub/sorting/main.log
+plugins/vdm2isa/src/test/resources/lvl0/.generated
