--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -126,10 +126,13 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>3.0.0-M6</version>
+					<!-- Added argline + forkCount after seeing "[ERROR] Error occurred in starting fork, check output in log" -->
 					<configuration>
+		                <!-- <argLine>-Xmx1024m -XX:MaxPermSize=256m ${surefireArgLine}</argLine> -->
 						<includes>
 							<include>**/*Test.java</include>
 						</includes>
+		                <!-- <forkCount>0</forkCount> -->
 					</configuration>
 				</plugin>
 
