--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ plugins/vdm2isa/pub/csv-lib/main.bbl
 plugins/vdm2isa/pub/csv-lib/main.blg
 plugins/vdm2isa/pub/csv-lib/main.log
 main.log
+plugins/vdm2isa/pub/isq-lib/main.bbl
+plugins/vdm2isa/pub/isq-lib/main.blg
