--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ plugins/vdm2isa/pub/csv-lib/main.log
 main.log
 plugins/vdm2isa/pub/isq-lib/main.bbl
 plugins/vdm2isa/pub/isq-lib/main.blg
+plugins/vdm-antlr/target
