initial VDM(-SL, PP, RT?!) parser grammar. Stop at type definition to test

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ main.log
 plugins/vdm2isa/pub/isq-lib/main.bbl
 plugins/vdm2isa/pub/isq-lib/main.blg
 plugins/vdm-antlr/target
+plugins/vdm-antlr/src/main/resources/.antlr
