--- a/experiments/vdm/Games/ConwayGL/pom.xml
+++ b/experiments/vdm/Games/ConwayGL/pom.xml
@@ -8,8 +8,6 @@
   <name>ConwayGL</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.source.level>11</project.source.level>
-        <project.target.level>11</project.target.level>
     </properties>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -19,10 +17,10 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
-		<dependency>
-			<groupId>com.fujitsu</groupId>
+        <dependency>
+			<groupId>dk.au.ece.vdmj</groupId>
 			<artifactId>vdmj</artifactId>
-			<version>4.4.4-SNAPSHOT</version>
+			<version>4.5.0-SNAPSHOT</version>
 		</dependency>
   </dependencies>
 
