--- a/experiments/vdm/Games/ConwayNB/.vscode/settings.json
+++ b/experiments/vdm/Games/ConwayNB/.vscode/settings.json
@@ -3,6 +3,6 @@
     "java.project.outputPath": "bin",
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "/Users/nljsf/.m2/repository/com/fujitsu/vdmj/4.4.4-SNAPSHOT/vdmj-4.4.4-SNAPSHOT.jar"
+        "~/.m2/repository/dk/au/ece/vdmj/vdmj/4.5.0-SNAPSHOT/vdmj-4.5.0-SNAPSHOT.jar"
     ]
 }
