made it Maven dependency so that it will download VDMJ if/as needed ;-).

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ plugins/vdm2isa/pub/isq-lib/main.blg
 plugins/vdm-antlr/target
 plugins/vdm-antlr/src/main/resources/.antlr
 experiments/vdm/Games/ConwayGL/target
+experiments/vdm/Games/ConwayNB/target
