--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ plugins/vdm-antlr/target
 plugins/vdm-antlr/src/main/resources/.antlr
 experiments/vdm/Games/ConwayGL/target
 experiments/vdm/Games/ConwayNB/target
+experiments/vdm/IsaGenOverture/target
