ignored stuff + settings.json now carrying along PVS stuff, hum..

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ plugins/vdm-antlr/src/main/resources/.antlr
 experiments/vdm/Games/ConwayGL/target
 experiments/vdm/Games/ConwayNB/target
 experiments/vdm/IsaGenOverture/target
+plugins/vdm-antlr/src/main/resources/output
