--- a/plugins/vdmlib/.vscode/settings.json
+++ b/plugins/vdmlib/.vscode/settings.json
@@ -1,3 +1,29 @@
 {
-    "java.configuration.updateBuildConfiguration": "automatic"
+    "java.configuration.updateBuildConfiguration": "automatic",
+    "workbench.view.alwaysShowHeaderActions": true,
+    "workbench.tree.renderIndentGuides": false,
+    "[pvs]": {
+        "editor.wordSeparators": "`~!@#$%^&*()-=+[{]}|;:'\",.<>/"
+    },
+    "files.exclude": {
+        "**/.git": true,
+        "**/.svn": true,
+        "**/.hg": true,
+        "**/CVS": true,
+        "**/.DS_Store": true,
+        "**/Thumbs.db": true,
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true,
+        "**/*.???~": true,
+        "**/.pvscontext": true,
+        "**/pvsbin": true,
+        "**/*.jprf": true,
+        "**/*.prf": true,
+        "**/orphaned-proofs.prf": true,
+        "**/*_adt.pvs": false,
+        "**/*.log": true,
+        "**/.vscode": true
+    }
 }
