--- a/plugins/vdm-antlr/.vscode/settings.json
+++ b/plugins/vdm-antlr/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "java.configuration.updateBuildConfiguration": "automatic",
     "workbench.view.alwaysShowHeaderActions": true,
-    "workbench.tree.renderIndentGuides": "onHover",
+    "workbench.tree.renderIndentGuides": false,
     "files.exclude": {
         "**/.git": true,
         "**/.svn": true,
