ignore file and test expr grammar

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ experiments/vdm/Games/ConwayNB/target
 experiments/vdm/IsaGenOverture/target
 plugins/vdm-antlr/src/main/resources/output
 plugins/vdm-antlr/src/main/antlr4/.antlr
+plugins/vdm-antlr/src/main/java/vdmantlr/generated
