hum. not sure how to do 1.8 ad 11 builds

--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -27,6 +27,9 @@
 		<module>vdmlib</module>
 		<module>vdm2isa</module>
 		<module>vdm2isa-lsp</module>
+		<!-- TODO figure out how to build Java11 for the vdm-antlr plugin
+		-->
+		<module>vdm-antlr</module>
 	</modules>
 
 	<!-- General dependency inclusion with relative versioning -->
